# eeelcollector

./: .clang-tidy  .dockerignore  CMakeLists.txt  README.md  README_building.md  README_docker.md  conanfile.txt  task.md
.devcontainer/: Dockerfile
.github/actions/setup_cache/: action.yml
.github/workflows/: ci.yml
configured_files/: config.hpp.in
deployment/: Dockerfile
remoteenv/: Dockerfile
src/: CMakeLists.txt  main.cpp
src/appcontrol/: CMakeLists.txt  CollectFilesTask.cpp  Configuration.cpp  WatchTriggerDirectoryTask.cpp
src/appcontrol/include/appcontrol/: CollectFilesTask.hpp  Configuration.hpp  WatchTriggerDirectoryTask.h
src/datacollector/: CMakeLists.txt  CollectDiskUsageWithSTL.cpp  CollectFilesAtTarget.cpp  TarFileStorage.cpp  util.cpp
src/datacollector/include/datacollector/: CollectAvailableSpaceWithSTL.hpp  CollectFilesAtTarget.hpp  CollectionInfoObject.hpp  DataCollector.hpp  TarFileStorage.hpp  util.h
src/dirwatcher/: CMakeLists.txt  DirectoryFileListRetriever.cpp  FileFilter.cpp  FilenameMatcher.cpp  TriggerFileCache.cpp
src/dirwatcher/include/dirwatcher/: DirectoryFileListRetriever.h  FileFilter.h  FilenameMatcher.h  TriggerFileCache.h
src/eeelcollector/: CMakeLists.txt  main.cpp
src/filewatchcontrol/: CMakeLists.txt  WatchTriggerDirectoryTask.cpp
src/filewatchcontrol/include/filewatchcontrol/: WatchTriggerDirectoryTask.h
test/: CMakeLists.txt  google_smoke_test.cpp
test/_resources/filelistscenario/a/: a_foo1.txt  a_foo2.txt
test/_resources/filelistscenario/b/: b_foo1.txt  b_foo2.txt
test/_resources/filelistscenario/c/: core.ServiceName.3057.57dd721409bc4ab4b38a3c33a36a608a.3717.1647975805000000.lz4
test/appcontrol/: ArgParseConfugiration_Test.cpp  CMakeLists.txt  CollectorFilesTask_Test.cpp  WatchTriggerDirectoryTask_Test.cpp
test/datacollector/: CMakeLists.txt  CollectDiskUsageTest.cpp  CollectFIlesTest.cpp  util_Test.cpp
test/dirwatcher/: CMakeLists.txt  DirectoryFileListRetriever_Test.cpp  FileFilter_Test.cpp  FilenameMatcher_Test.cpp  TriggerFileCache_Test.cpp
test/filewatchcontrol/: CMakeLists.txt  WatchTriggerDirectoryTask_Test.cpp
test/util/: CMakeLists.txt  testutil.cpp  testutil.h  testutil_Test.cpp  util.cpp  util_Test.cpp
